# vlm-mechanistic-analysis

./: .gitignore  conftest.py  pyproject.toml
analysis/: results_overview.ipynb  vlind_bench_oe_explore.ipynb
chain_of_embedding/: contrastive_forward.py  tvi.py  vip.py
chain_of_embedding/models/: gemma3.py
configs/: paths.yaml
data_loaders/: __init__.py  vab.py  vilp.py  vlind_bench.py  vlind_bench_oe.py  vqav2.py
dataset_creation/: add_factual_images.py  convert_vlind_bench_oe.py  vlind_bench_oe_utils.py
dataset_creation/vlind_bench_oe/: generated.jsonl
eva/: eva_decoding.py  js_divergence.py
feature_search/: contrastive_search.py  sae_utils.py  steering.py  validation.py
revis/: vector_calculator.py
sae_analysis/: concept_analysis.py
sae_convergence/: convergence.py
scripts/: ablate_blank_image.py  debug_vab_predictions.py  download_image_dataset.py  patch_vab_resolution.py  recompute_vab_correctness.py  results_table.py  run_chain_of_embedding.py  run_concept_analysis.py  run_eva.py  run_eva_decoding.py  run_feature_search.py  run_revis.py  run_sae_convergence.py  run_steering.py  run_validation.py  run_vlind_bench_oe.py  submit.py
tests/: conftest.py  test_concept_analysis.py  test_contrastive_search.py  test_data_loaders.py  test_eva_decoding.py  test_gemma3_helpers.py  test_integration.py  test_js_divergence.py  test_revis.py  test_steering.py  test_validation.py  test_vip_tvi.py
